--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.2.0
   json_annotation: ^4.8.1
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
